--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 
 <a href="/register">Register</a>
 
-Viestien määrä: {{ count }}
+<hr>
+<p>Viestien määrä: {{ count }}</p>
 <hr>
 {% for message in messages %}
 {{ message.content }}
