Added user registering/login fuctions

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,7 @@
 <title>Äks</title>
 <h1>Welcome to Äks</h1>
 
-<a href="/login">Login</a>
-
-<p>Don't have an account?</p>
-
-<a href="/register">Register</a>
+{% include 'navbar.html' %}
 
 <hr>
 <p>Viestien määrä: {{ count }}</p>
