--- a/templates/messages.html
+++ b/templates/messages.html
@@ -4,6 +4,13 @@
 {% include 'navbar.html' %}
 
 <h3>Showing all messages</h3>
+
+<h4>Search from messages</h4>
+<form method="POST" action="/messages/search">
+    <input type="text" name="query" placeholder="Search a message">
+    <button type="submit">Post</button>
+</form>
+
 <a href="/messages/new">Click here to post a new message</a>
 <hr>
 <h5># of messages: {{ count }}</h5>
