Added user page and ability to follow users

--- a/templates/detailed.html
+++ b/templates/detailed.html
@@ -7,7 +7,7 @@
 <h2>Message:</h2>
 <hr>
 
-<h3>{{ username.0 }}</h3>
+<h3>{{ username.0 }} <a href="/user/{{user_id}}"> User details </a></h3>
 <p>{{ message.content }}</p>
 
 <hr>
