--- a/templates/messages.html
+++ b/templates/messages.html
@@ -8,7 +8,7 @@
 <h4>Search from messages</h4>
 <form method="POST" action="/messages/search">
     <input type="text" name="query" placeholder="Search a message">
-    <button type="submit">Post</button>
+    <button type="submit">Search</button>
 </form>
 
 <a href="/messages/new">Click here to post a new message</a>
