--- a/templates/error.html
+++ b/templates/error.html
@@ -1,1 +1,19 @@
-{{ error }}
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h1 {text-align: center;}
+
+</style>
+</head>
+
+<body>
+    {{ error }}
+</body>
