--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,23 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h1, head {
+    text-align: center;
+}
+
+</style>
+</head>
+
+<body>
+
 <head>
     <title>Login</title>
 </head>
@@ -8,3 +28,4 @@
         <input type="text" name="password" placeholder="Enter your password">
         <button type="submit">Login</button>
     </form>
+</body>
