--- a/templates/messages_new.html
+++ b/templates/messages_new.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h1 {text-align: center;}
+
+</style>
+</head>
+
 <title>Äks</title>
 <h1>Welcome to Äks</h1>
 
@@ -10,3 +26,4 @@
         <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
         <button type="submit">Post</button>
     </form>
+</body>
