--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+
+body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
+
+h1, head {text-align: center;}
+
+</style>
+</head>
+
 <head>
     <title>Register</title>
 </head>
@@ -8,3 +24,4 @@
         <input type="text" name="password" placeholder="Enter your password">
         <button type="submit">Register</button>
     </form>
+</body>
