--- a/templates/messages.html
+++ b/templates/messages.html
@@ -1,22 +1,41 @@
-<title>Äks</title>
-<h1>Welcome to Äks</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
 
-{% include 'navbar.html' %}
+body {
+    margin: auto;
+    max-width: 45em;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+}
 
-<h3>Showing all messages</h3>
+h1, body1 {text-align: center;}
 
-<h4>Search from messages</h4>
-<form method="POST" action="/messages/search">
-    <input type="text" name="query" placeholder="Search a message">
-    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
-    <button type="submit">Search</button>
-</form>
+</style>
+</head>
 
-<a href="/messages/new">Click here to post a new message</a>
-<hr>
-<h5># of messages: {{ count }}</h5>
-<hr>
-{% for message in messages %}
-<a href="/messages/{{message.id}}">{{ message.content }}</a>
-<hr>
-{% endfor %}
+<body>
+    <title>Äks</title>
+    <h1>Welcome to Äks</h1>
+
+    {% include 'navbar.html' %}
+    <body1>
+        <h3>Showing all messages</h3>
+
+        <h4>Search from messages</h4>
+        <form method="POST" action="/messages/search">
+            <input type="text" name="query" placeholder="Search a message">
+            <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}">
+            <button type="submit">Search</button>
+        </form>
+        <p></p>
+        <a href="/messages/new">Click here to post a new message</a>
+    </body1>
+    <hr>
+    <h5># of messages: {{ count }}</h5>
+    <hr>
+    {% for message in messages %}
+    <a href="/messages/{{message.id}}">{{ message.content }}</a>
+    <hr>
+    {% endfor %}
+</body>
