Added hidden password fields to login/register forms

--- a/templates/login.html
+++ b/templates/login.html
@@ -25,7 +25,7 @@ h1, head {
     <h2>Login</h2>
     <form method="POST" action="/loginuser">
         <input type="text" name="username" placeholder="Enter your name">
-        <input type="text" name="password" placeholder="Enter your password">
+        <input type="password" name="password" placeholder="Enter your password">
         <button type="submit">Login</button>
     </form>
 </body>
