--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@ h1, head {text-align: center;}
     <h2>Register a new user</h2>
     <form method="POST" action="/registeruser">
         <input type="text" name="username" placeholder="Enter your name">
-        <input type="text" name="password" placeholder="Enter your password">
+        <input type="password" name="password" placeholder="Enter your password">
         <button type="submit">Register</button>
     </form>
 </body>
