Added ability for users to become members of Äks-club

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
 
 .nav li {
   display: inline-block;
-  font-size: 20px;
+  font-size: 16px;
   padding: 20px;
 }
 </style>
@@ -26,7 +26,8 @@
         <p>You're logged in as {{ session.username }}</p>
         <li><a href="/">Home</a></li>
         <li><a href="/messages">Messages</a></li>
-        <li><a href="/followed">Show followed users messages</a></li>
+        <li><a href="/followed">Followed users messages</a></li>
+        <li><a href="/membership">Become a member</a></li>
         <li><a href="/logout">Log out</a></li>
         {% else %}
         <li><a href="/">Home</a></li>
