--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
 
 .nav li {
   display: inline-block;
-  font-size: 16px;
+  font-size: 20px;
   padding: 20px;
 }
 </style>
@@ -27,6 +27,7 @@
         <li><a href="/">Home</a></li>
         <li><a href="/messages">Messages</a></li>
         <li><a href="/followed">Followed users messages</a></li>
+        <li><a href="/club">Äks-Club messages</a></li>
         <li><a href="/membership">Become a member</a></li>
         <li><a href="/logout">Log out</a></li>
         {% else %}
