Did some code cleaning with the help of pylint

--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,10 @@ h1, head {
 </head>
 
 <body>
+    <title>Äks</title>
+    <h1>Welcome to Äks</h1>
+
+    {% include 'navbar.html' %}
 
 <head>
     <title>Login</title>
