--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,11 @@ h1, head {text-align: center;}
 </head>
 
 <head>
+    <title>Äks</title>
+    <h1>Welcome to Äks</h1>
+
+    {% include 'navbar.html' %}
+    
     <title>Register</title>
 </head>
 <body>
