--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,21 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-body {
-    margin: auto;
-    max-width: 45em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-}
-
-table, th, td {
-  border:1px solid black;
-}
-
-h1, h3, form {text-align: center;}
-
-</style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/main.css') }}">
 </head>
 
 <body>
