--- a/templates/club.html
+++ b/templates/club.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-body {
-    margin: auto;
-    max-width: 45em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-}
-
-h1, body1 {text-align: center;}
-
-</style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/main.css') }}">
 </head>
 
 <body>
