--- a/templates/login.html
+++ b/templates/login.html
@@ -1,19 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-body {
-    margin: auto;
-    max-width: 45em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-}
-
-h1, head {
-    text-align: center;
-}
-
-</style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/main.css') }}">
 </head>
 
 <body>
