--- a/templates/register.html
+++ b/templates/register.html
@@ -1,17 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-
-body {
-    margin: auto;
-    max-width: 45em;
-    font-family: 'Helvetica', 'Arial', sans-serif;
-}
-
-h1, head {text-align: center;}
-
-</style>
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/main.css') }}">
 </head>
 
 <head>
@@ -19,7 +9,7 @@ h1, head {text-align: center;}
     <h1>Welcome to Äks</h1>
 
     {% include 'navbar.html' %}
-    
+
     <title>Register</title>
 </head>
 <body>
